--- a/src/components/FaceRecognition/FaceRecognition.css
+++ b/src/components/FaceRecognition/FaceRecognition.css
@@ -1,7 +1,7 @@
 .bounding-box {
   position: absolute;
-  filter: blur(5px);
-  background-color: rgb(168, 229, 26);
+  filter: blur(20px);
+  background-color : white;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
